Version 0.99.2:

    * an option to create an integer snp.id when converting from PLINK


Version 0.99.0:

    * initial submission to Bioconductor
    * moving from CRAN to Bioconductor