@@ -3,7 +3,7 @@ Type: Package
 Title: Parallel computing toolset for relatedness and principal
         component analysis of SNP data
 Version: 0.99.2
-Date: 2014-09-20
+Date: 2014-09-28
 Depends: R (>= 2.14), gdsfmt (>= 1.1.0)
 LinkingTo: gdsfmt
 Imports: parallel
